--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,18 +81,17 @@
 
 html,
 body {
+  height: 100%;
+  width: 100%;
   max-width: 100vw;
   overflow-x: hidden;
+  background-image: url('/images/blackboard.png');
+  background-size: cover;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  /* color: rgb(var(--foreground-rgb)); */
+  color: #FFFFFF;
 }
 
 a {
